# SummerSchool2021

./: .gitignore  LICENSE  README.md
great_model/: Cargo.toml  pyproject.toml  requirements.txt  setup.py
great_model/great_model/numpy_great_model/: __init__.py  scaled_t_model.py
great_model/great_model/python_great_model/: scaled_t_model.py
great_model/src/: lib.rs
great_model/src/my_great_model/: models.py
presentation/: SummerSchool2021.tex
